# eql

./: .gitignore  CONTEXT.md  Cargo.toml  DOCS.md  LICENSE  README.md  REPO_STRUCTURE.md  ROADMAP.md  balance.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  repl.rs
crates/common/: Cargo.toml
crates/common/src/: chain.rs  types.rs
crates/core/: Cargo.toml  README.md  file.json
crates/core/benches/: bench.rs
crates/core/src/: lib.rs
crates/core/src/common/: account.rs  block.rs  chain.rs  config.rs  dump.rs  ens.rs  entity.rs  entity_filter.rs  entity_id.rs  filters.rs  logs.rs  mod.rs  query_builder.rs  query_result.rs  serializer.rs  transaction.rs  types.rs
crates/core/src/interpreter/: mod.rs
crates/core/src/interpreter/backend/: block_resolver.rs  execution_engine.rs  mod.rs  resolve_account.rs  resolve_block.rs  resolve_logs.rs  resolve_portal.rs  resolve_sum_query.rs  resolve_transaction.rs  sqd.rs
crates/core/src/interpreter/frontend/: mod.rs  parser.rs  productions.pest  sementic_analyzer.rs
crates/core/src/interpreter/frontend/sql/: legacy.rs  mod.rs  prelex.rs  schema.rs  translate.rs  values.rs  where_clause.rs
crates/interpreter/: Cargo.toml  README.md
crates/interpreter/src/: lib.rs
crates/interpreter/src/backend/: execution_engine.rs  mod.rs
crates/interpreter/src/frontend/: parser.rs  sementic_analyzer.rs
crates/macros/: Cargo.toml
crates/macros/src/: README.md  lib.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
docs/: evaluation-2026-07-20.md  installation.md  product-roadmap.md  query.md  roadmap.md
docs/adr/: 0001-duckdb-dialect-subset.md  0002-eql2-language-surface.md  0002-transfers-entity.md
docs/superpowers/plans/: 2026-07-17-portal-primary-routing.md  2026-07-17-remove-fantom-support.md  2026-07-20-pr68-review-fixes.md  2026-07-21-eql2-sql-dialect.md
docs/superpowers/specs/: 2026-07-17-portal-primary-routing-design.md  2026-07-17-remove-fantom-support-design.md
eqlup/: default-config.json  eqlup.sh  install.sh
examples/: get-account.eql  get-block.eql  get-logs.eql  get-transaction.eql  query.eql
src/: main.rs
src/cli/: mod.rs
src/common/: chain.rs  mod.rs  types.rs
src/interpreter/: mod.rs
src/interpreter/backend/: execution_engine.rs  mod.rs  payload_builder.rs
src/interpreter/frontend/: ast.rs  mod.rs  parser.rs  productions.pest  sementic_analyzer.rs
src/repl/: mod.rs
