[workspace]
members = ["crates/cli", "crates/interpreter", "crates/common"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.78"
authors = ["Ian K. Guimaraes <ianguimaraes31@gmail.com>"]

[workspace.dependencies]
eql_interpreter = { path = "crates/interpreter" }
eql_common = { path = "crates/common" }
eql_cli = { path = "crates/cli" }
