[workspace]
members = ["crates/cli", "crates/core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.78"
authors = ["Ian K. Guimaraes <ianguimaraes31@gmail.com>"]

[workspace.dependencies]
eql_core = { path = "crates/core" }
eql_cli = { path = "crates/cli" }
