[package]
name = "eql_cli"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
eql_core = { workspace = true }
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tabled = "0.15.0"
crossterm = "0.27.0"
csv = "1.1"
csv_to_table = "0.3"
serde = "1"

[[bin]]
name = "eql"
path = "src/main.rs"
